# RaspiSequencer

./: CMakeLists.txt  README.md  ROADMAP.txt  main.cpp
core/: MIDIDevice.cpp  MIDINote.h
iterators/: Loop.cpp  Loop.h  NoteIterator.h  OneShot.cpp  OneShot.h  Reverse.cpp
sequencer/: NoteIterator.cpp  NoteIterator.h  StepSequencer.cpp  StepSequencer.h
src/: main.cpp
src/core/: MIDIDevice.h  MIDINote.h
src/iterators/: NoteIterator.h  Reverse.h
src/sequencer/: SeqNote.h
